added fontawesome back

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="Keywords" content="cemu, shader, macos, compatibility, mac, nintendo, wiiu, wii-u, zelda, botw">
     <meta name="Description" content="Compatibility chart for Cemu running on macOS">
     <title>Cemu macOS Compatibility Chart</title>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css">
     <link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon/favicon-16x16.png">
